- add some security stuff

--- a/roles/r_deploy_ca/tasks/README
+++ b/roles/r_deploy_ca/tasks/README
@@ -2,7 +2,7 @@
 ## name: r_deploy_ca
 ##
 ## function:
-## - put vodafone/kdg ca's in place
+## - put ca's in place
 ##
 ## dev: heiko stein
 ## mail: heiko.stein@etomer.com
